# l4d2-mods

./: CMakeLists.txt  README.md
berserker/: CMakeLists.txt  berserker.sp
bezerker/: CMakeLists.txt  bezerker.sp
cmake/Modules/: FindSourcePawn.cmake  SourcePawn.cmake
johnny/: cvars.sp  messages.sp  players.sp
medic/: CMakeLists.txt  medic.sp
